--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -16,7 +16,7 @@ nav{
     justify-content: space-between;
     padding: 1rem 4rem;
     z-index: 2;
-    border-bottom: 0.1px solid gray;
+    background-color: white;
 }
 
 .nav__brand{
